SERVER-60548 Check for `kUnset` in `MinMax::_appendUpdates`

(cherry picked from commit 2caf04aea31915ca82238559b57a4a2c170072c3)